--- a/site/visao-produto-projeto/visao-projeto/index.html
+++ b/site/visao-produto-projeto/visao-projeto/index.html
@@ -764,6 +764,12 @@
 <td align="center">Atualização da organização do projeto e adição da tabela de Scrum/Xp</td>
 <td align="center">Bruno Tarquinio e Marina Márcia</td>
 </tr>
+<tr>
+<td align="center">22/11/2023</td>
+<td align="center">1.4</td>
+<td align="center">Atualização da tabela Planejamento das fases ou iterações do projeto</td>
+<td align="center">Bruno Tarquinio e Marina Márcia</td>
+</tr>
 </tbody>
 </table>
 <h2 id="organizacao-do-projeto">Organização do Projeto</h2>
@@ -875,37 +881,37 @@
 <td align="center">18/09/2023</td>
 </tr>
 <tr>
-<td align="center">0</td>
+<td align="center">1</td>
 <td align="center">Produção da Visão de Produto e Projeto;<br>Conclusão da ideia do produto;<br>Produção do processo de desenvolvimento de software</td>
 <td align="center">19/09/2023</td>
 <td align="center">01/10/2023</td>
 </tr>
 <tr>
-<td align="center">0</td>
+<td align="center">2</td>
 <td align="center">Criação inicial do backlog do produto;</td>
 <td align="center">02/10/2023</td>
 <td align="center">15/10/2023</td>
 </tr>
 <tr>
-<td align="center">0</td>
+<td align="center">3</td>
 <td align="center">backlog pririzado e propostas de mvp</td>
 <td align="center">16/10/2023</td>
 <td align="center">29/10/2023</td>
 </tr>
 <tr>
-<td align="center">1</td>
+<td align="center">4</td>
 <td align="center">US01 , US02 , US03 , US05 </br> US06 , US07 , US08 ,</td>
 <td align="center">30/10/2023</td>
 <td align="center">13/11/2023</td>
 </tr>
 <tr>
-<td align="center">2</td>
+<td align="center">5</td>
 <td align="center">US09 , US10 , US12, </br> US18 , US19 , US20 , US13 , US14</td>
 <td align="center">14/11/2023</td>
 <td align="center">28/11/2023</td>
 </tr>
 <tr>
-<td align="center">3</td>
+<td align="center">6</td>
 <td align="center">US15 , US16 , US17 , US04 ,US11</td>
 <td align="center">29/11/2023</td>
 <td align="center">12/12/2023</td>
